<resources>
    <string name="app_name">Events</string>
    <string name="button_login">Log In</string>
    <string name="title_activity_home">Home</string>
    <string name="username">Username</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="home">Homelocation</string>
    <string name="birth">Date of Birth</string>
    <string name="phone">Phone Number</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="title_activity_register">Sign up</string>
    <string name="register">Register</string>
    <string name="events">Events</string>
    <string name="msg_token_fmt">token TOKEN</string>

    <!--Main view for searching through activities - Michal Matuszewski-->
    <string name="event_list_title">Events in your area</string>
    <string name="title_activity_main">My Events</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="show_map">Guide to Event!</string>
    <string name="title_activity_all_events">AllEventsActivity</string>
    <string name="event_over">Event is already over:(</string>
    <string name="birth_label">Date of Birth</string>
    <string name="title_activity_gallery">Gallery</string>


</resources>
